crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__ruff_test__statement__assert_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
---
## Input
```py
assert (
    # Asserted
)

# Some assert
assert (
    # Let's go inside
    True  # Go around this
    # Below that    
), "Some string"  # Outside this way
# Passed all that

# Dangle this here

# Some assert
assert (
    # Let's go inside
    True  # Go around this
    # Below that

    # Dangle that there
), "Some string"  # Outside this way
# Passed all that
```



## Output
```py
assert (
    # Asserted
)

# Some assert
assert (
    # Let's go inside
    True  # Go around this
    # Below that
), "Some string"  # Outside this way
# Passed all that

# Dangle this here

# Some assert
assert (
    # Let's go inside
    True  # Go around this
    # Below that
    # Dangle that there
), "Some string"  # Outside this way
# Passed all that
```


