crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__ruff_test__statement__break_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
---
## Input
```py
# leading comment
while True:  # block comment
    # inside comment
    break  # break comment
    # post comment
```



## Output
```py
# leading comment
while True:  # block comment
    # inside comment
    break  # break comment
    # post comment
```


